# Q-Lite

./: .gitignore  .gitmodules  index.html  package-lock.json  package.json  style.css  vite.config.js
.github/workflows/: vercel.yaml
ai/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ai/src/: BFS.cpp  BFS.h  Bindings.cpp  CMakeLists.txt  Engine.cpp  Engine.h  MoveGen.cpp  MoveGen.h  Position.cpp  Position.h  Quoridor.h  Search.cpp  Search.h  TransTable.cpp  TransTable.h
ai/tests/: BFS.cpp  CMakeLists.txt  Engine.cpp  MoveGen.cpp  Position.cpp
public/models/environment/: chinese_fountain_grass.glb  grass_patches.glb
src/: audio.js  main.js  renderer3d.js  worker.js
src/renderer3d/: background.js  board.js  classPreview.js  constants.js  environment.js  geometry.js  grassLanes.js  island.js  labels.js  meshes.js  pawns.js  reserveWalls.js  scene.js
